2006-08-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-scriptable.h:
	* src/totem-mozilla-viewer.c:
	Patch from Christian Persch <chpe@cvs.gnome.org> and myself to
	reduce the amount of memory used by all of our gbooleans
	(Closes: #350577)

2006-08-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_set_property),
	(totem_pl_parser_parse): patch from Christian Persch
	<chpe@cvs.gnome.org> to reduce the amount of memory used by all
	of our gbooleans (Closes: #350481)

2006-08-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_asx_entry),
	(parse_asx_entries), (parse_smil_entry),
	(totem_pl_parser_add_quicktime_metalink), (parse_xspf_track):
	Fix more uses of guchar * when we mean xmlChar *, make sure
	xmlFree is called on non-NULL variables (Closes: #350467)

2006-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/plparse/totem-pl-parser.c:
	Fix mismatched allocators. Bug #350467.

2006-08-08  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: link the browser plugin against the playlist
	parser
	* src/plparse/test-parser.c: (playlist_started), (playlist_ended),
	(test_parsing): show the playlist start and end signals
	* src/totem-mozilla-options.h:
	* src/totem-mozilla-plugin.cpp:
	* src/totem-mozilla-scriptable.h:
	* src/totem-mozilla-viewer.c: (on_eos_event), (entry_added),
	(totem_embedded_push_parser), (main):
	Add support for reading playlists from the disk, instead of
	passing them to the backend, keep a list of files to be played,
	and pass from one to the other allowing a repeat mode
	(Closes: #329138, #171884)

2006-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	Fix a builddir problem, and make some simplifications. Bug #350179.

2006-08-08  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_is_ra),
	(totem_pl_parser_is_asf), (totem_pl_parser_is_quicktime),
	(totem_pl_parser_add_quicktime):