@@ -8,5 +8,6 @@
     <method name="SetLocalFile">
       <arg type="s"/>
     </method>
+    <signal name="StopSendingData"/>
   </interface>
 </node>
