@@ -1,5 +1,17 @@
 2006-08-09  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-mozilla-interface.xml:
+	* src/totem-mozilla-plugin.cpp:
+	* src/totem-mozilla-scriptable.h:
+	* src/totem-mozilla-viewer.c: (totem_embedded_class_init),
+	(totem_embedded_emit_stop_sending_data), (totem_embedded_open),
+	(on_eos_event): add a StopSendingData signal to the viewer,
+	and call it when the front-end should stop sending us data,
+	the plugin then stops sending data, and destroys the stream
+	(Closes: #334664)
+
+2006-08-09  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-mozilla-scriptable.h:
 	* src/totem-mozilla-viewer.c:
 	Patch from Christian Persch <chpe@cvs.gnome.org> and myself to
